[ENHANCEMENT]Change the jos posting to be search by query and user role to be multi roles
